# acapy-plugin-qa

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality-check.yml  tests.yml
acapy_plugin_qa/: definition.py  routes.py
acapy_plugin_qa/v1_0/: manager.py  message_types.py  routes.py
acapy_plugin_qa/v1_0/handlers/: answer_handler.py  question_handler.py  test_handler.py
acapy_plugin_qa/v1_0/messages/: answer.py  question.py
acapy_plugin_qa/v1_0/models/: qa_exchange_record.py
docker/: Dockerfile  default.yml
docs/delegated-qa/1.0/: README.md
int/: Dockerfile  docker-compose.yml  pyproject.toml
int/tests/: conftest.py  test_qa.py
