[tool.poetry]
name = "acapy-plugin-qa"
version = "0.1.0"
description = "Q&A Protocol Plugin for ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
packages = [
    { include = "acapy_plugin_qa" },
]

[tool.poetry.dependencies]
python = "^3.6.9"
aries-cloudagent = { git = "https://github.com/indicio-tech/aries-cloudagent-python", rev = "1a4df0a0bcd00eab59df4fef303fc2d6655ba144", extras = ["indy"] }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.16.0"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
