[tool.poetry]
name = "acapy-plugin-qa"
version = "0.1.0"
description = "Q&A Protocol Plugin for ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
packages = [
    { include = "acapy_plugin_qa" },
]

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = {version = "0.10.1", allow-prereleases=true} 

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.16.0"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
