[tool.poetry]
name = "acapy-plugin-qa"
version = "0.1.0"
description = "Q&A Protocol Plugin for ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
packages = [
    { include = "acapy_plugin_qa" },
]

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = {version = "0.10.1", allow-prereleases=true} 

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.16.0"
black = "^23.7.0"
ruff =  "^0.0.287"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "C", "D"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
]

line-length = 90

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]